// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`IconPickerDialog - Snapshots > matches snapshot for the empty state 1`] = `
<body
  data-scroll-locked="1"
  style="pointer-events: none;"
>
  <span
    aria-hidden="true"
    data-aria-hidden="true"
    data-radix-focus-guard=""
    style="outline: none; opacity: 0; position: fixed; pointer-events: none;"
    tabindex="0"
  />
  <div
    aria-hidden="true"
    data-aria-hidden="true"
  />
  <div
    aria-hidden="true"
    class="fixed inset-0 z-40 bg-black/50 data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:animate-in data-[state=open]:fade-in-0"
    data-aria-hidden="true"
    data-slot="dialog-overlay"
    data-state="open"
    style="pointer-events: auto;"
  />
  <div
    class="fixed inset-0 z-50 flex justify-center items-end sm:items-center"
  >
    <div
      aria-labelledby="radix-normalized"
      class="relative z-50 duration-200 m-0 sm:m-4 data-[state=closed]:animate-out data-[state=open]:animate-in data-[state=closed]:slide-out-to-bottom data-[state=open]:slide-in-from-bottom sm:data-[state=closed]:slide-out-to-bottom-0 sm:data-[state=open]:slide-in-from-bottom-0 sm:data-[state=closed]:fade-out-0 sm:data-[state=open]:fade-in-0 sm:data-[state=closed]:zoom-out-95 sm:data-[state=open]:zoom-in-95 max-h-[calc(100dvh-2rem)] border bg-background shadow-lg sm:rounded-xl sm:rounded-b-lg rounded-t-lg border-b-0 sm:border-b flex h-110 w-lg max-w-[calc(100vw-2rem)] flex-col gap-6 overflow-hidden p-6 sm:max-w-lg sm:p-8"
      data-cy="dialog-content"
      data-slot="dialog-content"
      data-state="open"
      data-testid="icon-picker-dialog-content"
      id="radix-normalized"
      role="dialog"
      style="pointer-events: auto;"
      tabindex="-1"
    >
      <div
        class="flex flex-col gap-1.5 pr-6 shrink-0"
        data-slot="dialog-header"
        data-testid="dialog-header"
      >
        <h2
          class="text-xl/[1.4] font-bold text-foreground sm:text-2xl/[1.333]"
          data-slot="dialog-title"
          data-testid="dialog-title"
          id="radix-normalized"
        >
          Choose icon
        </h2>
      </div>
      <label
        class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 sr-only"
        data-slot="label"
        for="icon-picker-search"
      >
        Search for icon
      </label>
      <div
        class="relative shrink-0"
        data-testid="container"
      >
        <input
          aria-label="Search for icon"
          class="flex w-full min-w-0 bg-transparent py-1 transition-[color,box-shadow] outline-none selection:bg-primary selection:text-primary-foreground file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium file:text-foreground placeholder:text-input disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 hover:ring-0 hover:outline-none focus:ring-0 focus:ring-offset-0 focus:outline-none aria-invalid:border-destructive aria-invalid:ring-destructive/40 h-14 rounded-md border border-dashed border-input px-6 pr-12 text-lg shadow-none [&::-webkit-search-cancel-button]:appearance-none"
          data-testid="icon-picker-search"
          id="icon-picker-search"
          placeholder="Search for icon"
          type="search"
          value=""
        />
      </div>
      <span
        class="sr-only"
        data-testid="typography"
        role="status"
      >
        0 icons
      </span>
      <div
        class="min-h-0 flex-1 overflow-y-auto overscroll-contain pr-2"
        data-testid="icon-picker-scroll-area"
      >
        <p
          class="flex h-full items-center justify-center text-sm text-muted-foreground"
          data-testid="icon-picker-empty"
        >
          No icons found
        </p>
      </div>
      <button
        class="absolute top-4 right-4 cursor-pointer rounded-full bg-secondary p-2 transition-all duration-300 ease-in-out outline-none hover:bg-secondary/80 focus:outline-none disabled:pointer-events-none disabled:opacity-50"
        data-slot="dialog-close"
        data-testid="dialog-close"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-x h-4 w-4 text-secondary-foreground opacity-70"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 6 6 18"
          />
          <path
            d="m6 6 12 12"
          />
        </svg>
        <span
          class="sr-only"
        >
          Close
        </span>
      </button>
    </div>
  </div>
  <span
    aria-hidden="true"
    data-aria-hidden="true"
    data-radix-focus-guard=""
    style="outline: none; opacity: 0; position: fixed; pointer-events: none;"
    tabindex="0"
  />
</body>
`;

exports[`IconPickerDialog - Snapshots > matches snapshot for the icon grid 1`] = `
<body
  data-scroll-locked="1"
  style="pointer-events: none;"
>
  <span
    aria-hidden="true"
    data-aria-hidden="true"
    data-radix-focus-guard=""
    style="outline: none; opacity: 0; position: fixed; pointer-events: none;"
    tabindex="0"
  />
  <div
    aria-hidden="true"
    data-aria-hidden="true"
  />
  <div
    aria-hidden="true"
    class="fixed inset-0 z-40 bg-black/50 data-[state=closed]:animate-out data-[state=closed]:fade-out-0 data-[state=open]:animate-in data-[state=open]:fade-in-0"
    data-aria-hidden="true"
    data-slot="dialog-overlay"
    data-state="open"
    style="pointer-events: auto;"
  />
  <div
    class="fixed inset-0 z-50 flex justify-center items-end sm:items-center"
  >
    <div
      aria-labelledby="radix-normalized"
      class="relative z-50 duration-200 m-0 sm:m-4 data-[state=closed]:animate-out data-[state=open]:animate-in data-[state=closed]:slide-out-to-bottom data-[state=open]:slide-in-from-bottom sm:data-[state=closed]:slide-out-to-bottom-0 sm:data-[state=open]:slide-in-from-bottom-0 sm:data-[state=closed]:fade-out-0 sm:data-[state=open]:fade-in-0 sm:data-[state=closed]:zoom-out-95 sm:data-[state=open]:zoom-in-95 max-h-[calc(100dvh-2rem)] border bg-background shadow-lg sm:rounded-xl sm:rounded-b-lg rounded-t-lg border-b-0 sm:border-b flex h-110 w-lg max-w-[calc(100vw-2rem)] flex-col gap-6 overflow-hidden p-6 sm:max-w-lg sm:p-8"
      data-cy="dialog-content"
      data-slot="dialog-content"
      data-state="open"
      data-testid="icon-picker-dialog-content"
      id="radix-normalized"
      role="dialog"
      style="pointer-events: auto;"
      tabindex="-1"
    >
      <div
        class="flex flex-col gap-1.5 pr-6 shrink-0"
        data-slot="dialog-header"
        data-testid="dialog-header"
      >
        <h2
          class="text-xl/[1.4] font-bold text-foreground sm:text-2xl/[1.333]"
          data-slot="dialog-title"
          data-testid="dialog-title"
          id="radix-normalized"
        >
          Choose icon
        </h2>
      </div>
      <label
        class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 sr-only"
        data-slot="label"
        for="icon-picker-search"
      >
        Search for icon
      </label>
      <div
        class="relative shrink-0"
        data-testid="container"
      >
        <input
          aria-label="Search for icon"
          class="flex w-full min-w-0 bg-transparent py-1 transition-[color,box-shadow] outline-none selection:bg-primary selection:text-primary-foreground file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium file:text-foreground placeholder:text-input disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 hover:ring-0 hover:outline-none focus:ring-0 focus:ring-offset-0 focus:outline-none aria-invalid:border-destructive aria-invalid:ring-destructive/40 h-14 rounded-md border border-dashed border-input px-6 pr-12 text-lg shadow-none [&::-webkit-search-cancel-button]:appearance-none"
          data-testid="icon-picker-search"
          id="icon-picker-search"
          placeholder="Search for icon"
          type="search"
          value=""
        />
      </div>
      <span
        class="sr-only"
        data-testid="typography"
        role="status"
      >
        8 icons
      </span>
      <div
        class="min-h-0 flex-1 overflow-y-auto overscroll-contain pr-2"
        data-testid="icon-picker-scroll-area"
      >
        <div
          class="grid grid-cols-6 gap-x-2 gap-y-4 sm:grid-cols-10"
          data-testid="icon-picker-grid"
        >
          <button
            aria-label="a arrow down"
            aria-pressed="false"
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*=\\"size-\\"])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/40 aria-invalid:border-destructive font-semibold cursor-pointer border hover:bg-accent/50 border-none size-9 rounded-md p-0 shadow-none text-foreground hover:text-foreground"
            data-size="icon"
            data-slot="button"
            data-testid="icon-picker-option-a-arrow-down"
            data-variant="ghost"
            title="a arrow down"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-a-arrow-down size-6"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m14 12 4 4 4-4"
              />
              <path
                d="M18 16V7"
              />
              <path
                d="m2 16 4.039-9.69a.5.5 0 0 1 .923 0L11 16"
              />
              <path
                d="M3.304 13h6.392"
              />
            </svg>
          </button>
          <button
            aria-label="a arrow up"
            aria-pressed="false"
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*=\\"size-\\"])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/40 aria-invalid:border-destructive font-semibold cursor-pointer border hover:bg-accent/50 border-none size-9 rounded-md p-0 shadow-none text-foreground hover:text-foreground"
            data-size="icon"
            data-slot="button"
            data-testid="icon-picker-option-a-arrow-up"
            data-variant="ghost"
            title="a arrow up"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-a-arrow-up size-6"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m14 11 4-4 4 4"
              />
              <path
                d="M18 16V7"
              />
              <path
                d="m2 16 4.039-9.69a.5.5 0 0 1 .923 0L11 16"
              />
              <path
                d="M3.304 13h6.392"
              />
            </svg>
          </button>
          <button
            aria-label="a large small"
            aria-pressed="false"
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*=\\"size-\\"])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/40 aria-invalid:border-destructive font-semibold cursor-pointer border hover:bg-accent/50 border-none size-9 rounded-md p-0 shadow-none text-foreground hover:text-foreground"
            data-size="icon"
            data-slot="button"
            data-testid="icon-picker-option-a-large-small"
            data-variant="ghost"
            title="a large small"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-a-large-small size-6"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m15 16 2.536-7.328a1.02 1.02 1 0 1 1.928 0L22 16"
              />
              <path
                d="M15.697 14h5.606"
              />
              <path
                d="m2 16 4.039-9.69a.5.5 0 0 1 .923 0L11 16"
              />
              <path
                d="M3.304 13h6.392"
              />
            </svg>
          </button>
          <button
            aria-label="accessibility"
            aria-pressed="false"
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*=\\"size-\\"])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/40 aria-invalid:border-destructive font-semibold cursor-pointer border hover:bg-accent/50 border-none size-9 rounded-md p-0 shadow-none text-foreground hover:text-foreground"
            data-size="icon"
            data-slot="button"
            data-testid="icon-picker-option-accessibility"
            data-variant="ghost"
            title="accessibility"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-accessibility size-6"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="16"
                cy="4"
                r="1"
              />
              <path
                d="m18 19 1-7-6 1"
              />
              <path
                d="m5 8 3-3 5.5 3-2.36 3.5"
              />
              <path
                d="M4.24 14.5a5 5 0 0 0 6.88 6"
              />
              <path
                d="M13.76 17.5a5 5 0 0 0-6.88-6"
              />
            </svg>
          </button>
          <button
            aria-label="activity"
            aria-pressed="false"
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*=\\"size-\\"])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/40 aria-invalid:border-destructive font-semibold cursor-pointer border hover:bg-accent/50 border-none size-9 rounded-md p-0 shadow-none text-foreground hover:text-foreground"
            data-size="icon"
            data-slot="button"
            data-testid="icon-picker-option-activity"
            data-variant="ghost"
            title="activity"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-activity size-6"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M22 12h-2.48a2 2 0 0 0-1.93 1.46l-2.35 8.36a.25.25 0 0 1-.48 0L9.24 2.18a.25.25 0 0 0-.48 0l-2.35 8.36A2 2 0 0 1 4.49 12H2"
              />
            </svg>
          </button>
          <button
            aria-label="ad"
            aria-pressed="false"
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*=\\"size-\\"])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/40 aria-invalid:border-destructive font-semibold cursor-pointer border hover:bg-accent/50 border-none size-9 rounded-md p-0 shadow-none text-foreground hover:text-foreground"
            data-size="icon"
            data-slot="button"
            data-testid="icon-picker-option-ad"
            data-variant="ghost"
            title="ad"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-ad size-6"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10 13H6"
              />
              <path
                d="M10 15v-4a2 2 0 0 0-4 0v4"
              />
              <path
                d="M14 14.5a.5.5 0 0 0 .5.5h1a2.5 2.5 0 0 0 2.5-2.5v-1A2.5 2.5 0 0 0 15.5 9h-1a.5.5 0 0 0-.5.5z"
              />
              <rect
                height="14"
                rx="2"
                width="20"
                x="2"
                y="5"
              />
            </svg>
          </button>
          <button
            aria-label="air vent"
            aria-pressed="false"
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*=\\"size-\\"])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/40 aria-invalid:border-destructive font-semibold cursor-pointer border hover:bg-accent/50 border-none size-9 rounded-md p-0 shadow-none text-foreground hover:text-foreground"
            data-size="icon"
            data-slot="button"
            data-testid="icon-picker-option-air-vent"
            data-variant="ghost"
            title="air vent"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-air-vent size-6"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M18 17.5a2.5 2.5 0 1 1-4 2.03V12"
              />
              <path
                d="M6 12H4a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h16a2 2 0 0 1 2 2v5a2 2 0 0 1-2 2h-2"
              />
              <path
                d="M6 8h12"
              />
              <path
                d="M6.6 15.572A2 2 0 1 0 10 17v-5"
              />
            </svg>
          </button>
          <button
            aria-label="airplay"
            aria-pressed="false"
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*=\\"size-\\"])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/40 aria-invalid:border-destructive font-semibold cursor-pointer border hover:bg-accent/50 border-none size-9 rounded-md p-0 shadow-none text-foreground hover:text-foreground"
            data-size="icon"
            data-slot="button"
            data-testid="icon-picker-option-airplay"
            data-variant="ghost"
            title="airplay"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-airplay size-6"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5 17H4a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h16a2 2 0 0 1 2 2v10a2 2 0 0 1-2 2h-1"
              />
              <path
                d="m12 15 5 6H7Z"
              />
            </svg>
          </button>
        </div>
      </div>
      <button
        class="absolute top-4 right-4 cursor-pointer rounded-full bg-secondary p-2 transition-all duration-300 ease-in-out outline-none hover:bg-secondary/80 focus:outline-none disabled:pointer-events-none disabled:opacity-50"
        data-slot="dialog-close"
        data-testid="dialog-close"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-x h-4 w-4 text-secondary-foreground opacity-70"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 6 6 18"
          />
          <path
            d="m6 6 12 12"
          />
        </svg>
        <span
          class="sr-only"
        >
          Close
        </span>
      </button>
    </div>
  </div>
  <span
    aria-hidden="true"
    data-aria-hidden="true"
    data-radix-focus-guard=""
    style="outline: none; opacity: 0; position: fixed; pointer-events: none;"
    tabindex="0"
  />
</body>
`;
